修复评论功能，添加评论相关的控制器、服务、实体和映射器，并解决 Java 版本兼容性问题